--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
       <a-gltf-model src="https://elliedouha.github.io/aframe-test-webvr/assets/medieval_fantasy_book/scene.gltf"></a-gltf-model>
-    a-gltf-model src="https://elliedouha.github.io/aframe-test-webvr/assets/fox/scene.gltf" scale= ".5 .5 .5" position="0 5 -3"></a-gltf-model>
+    <a-gltf-model src="https://elliedouha.github.io/aframe-test-webvr/assets/fox/scene.gltf" scale= ".5 .5 .5" position="0 5 -3"></a-gltf-model>
     </a-scene>
   </body>
 </html>
